--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
   <script>
     const menuItems = [
       // Pizza
-      { name: "Margherita Pizza", price: 150, category: "pizza", img: "Margherita Pizza.jpg" },
+      { name: "Margherita Pizza", price: 150, category: "pizza", img: "images/Margherita Pizza.jpg" },
       { name: "Pepperoni Pizza", price: 180, category: "pizza", img: "https://i.imgur.com/dJ7LtFm.jpg" },
       { name: "Veggie Delight Pizza", price: 160, category: "pizza", img: "https://i.imgur.com/TnKDkkX.jpg" },
 
