--- a/index.html
+++ b/index.html
@@ -162,17 +162,17 @@
     const menuItems = [
       // Pizza
       { name: "Margherita Pizza", price: 150, category: "pizza", img: "images/margherita.jpg" },
-      { name: "Pepperoni Pizza", price: 180, category: "pizza", img: "https://i.imgur.com/dJ7LtFm.jpg" },
-      { name: "Veggie Delight Pizza", price: 160, category: "pizza", img: "https://i.imgur.com/TnKDkkX.jpg" },
+      { name: "Pepperoni Pizza", price: 180, category: "pizza", img: "images/peperoni.jpg" },
+      { name: "Veggie Delight Pizza", price: 160, category: "pizza", img: "images/veggie.jpg" },
 
       // Fries
-      { name: "French Fries", price: 60, category: "fries", img: "https://i.imgur.com/qnhj2kT.jpg" },
-      { name: "Cheese Fries", price: 80, category: "fries", img: "https://i.imgur.com/53qHv0r.jpg" },
+      { name: "French Fries", price: 60, category: "fries", img: "images/fries.jpg" },
+      { name: "Cheese Fries", price: 80, category: "fries", img: "images/cheese fries.jpg" },
 
       // Beverages
-      { name: "Coke", price: 40, category: "beverages", img: "https://i.imgur.com/u9Z3MJq.jpg" },
-      { name: "Cold Coffee", price: 70, category: "beverages", img: "https://i.imgur.com/nDcl4wa.jpg" },
-      { name: "Orange Juice", price: 50, category: "beverages", img: "https://i.imgur.com/UjlXlsU.jpg" },
+      { name: "Coke", price: 40, category: "beverages", img: "images/coke.jpg" },
+      { name: "Cold Coffee", price: 70, category: "beverages", img: "images/cold coffee.jpg" },
+      { name: "Orange Juice", price: 50, category: "beverages", img: "images/orange juice.jpg" },
     ];
 
     const pizzaDiv = document.getElementById("pizza-menu");
